5 August 2005 Sylvain Pion
- Replace CGAL_STD by std.

4 August 2005 Sylvain Pion
- Move Twotuple, Threetuple, Fourtuple, Sixtuple from Kernel_23, and document.
- Move memory.h from Kernel_23.
- Move assertions.[hC] from Kernel_23.
- Move CGAL/tags.h from Kernel_23.

4 May 2005 Sylvain Pion
- Remove g++ 2.95 workarounds.

======================== CGAL 3.1 ===========================

17 December 2004 Sylvain Pion
- Add myself as chapter author.

24 September 2004 Sylvain Pion
- test_stl_extension.C : remove some warning preventing code when NDEBUG that
  bugs with -D_GLIBCXX_DEBUG (the right fix is to not use assert).

24 June 2004 Menelaos Karavelas
- test suite for concatenate iterator is more verbose; also added
  test cases where at least one container is empty
- fixed bug in copy constructor and assignment operator for nested
  iterator
- added tests for assignment operator and copy constructor in nested
  iterator test suite

22 June 2004 Sylvain Pion
- G++ 3.4 test-suite fix.

16 June 2004 Menelaos Karavelas
- removed the CGAL_NO_DEPRECATED_CODE macro in Compact_container.h

20 May 2004 Sylvain Pion
- Add Compare_to_less.

27 April 2004 Sylvain Pion
- Much more symbol names shortening for Compact_container's iterators.

17 April 2004 Sylvain Pion
- Shorten symbol name CC_iterator -> CCit.

26 March 2004 Radu Ursu
-made doc work with the current implementation of the Manual tools

25 Feb 2004 Sylvain Pion
- Document Insert_iterator [bug#210].

21 Feb 2004 Sylvain Pion
- Move successor() and predecessor() from Convex_hull_2 to STL_Extension.

17 Feb 2004 Sylvain Pion
- Remove CGAL_CFG_NO_PARTIAL_CLASS_TEMPLATE_SPECIALISATION
  and associated CGAL/functional_msvc.h :)

10 February 2004 Radu Ursu
-Updated headers in examples


//---------------------------------------------------------------------
//      revision 303
//---------------------------------------------------------------------
- Remove useless reference to CGAL_CFG_ENUM_BUG
